--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6c63ff" />
     <meta
-      name="Ali Raza Portfolio"
+      name="Faizan Ali Portfolio"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7">
-    <meta property="og:title" content="Ali Raza Portfolio" />
+    <meta property="og:title" content="Faizan Ali Portfolio" />
     <meta property="og:type" content="website" />
     <link rel=preload href="/static/media/Montserrat-Regular.ee653992.ttf" as="font" type="font/woff" crossorigin>
     <link rel=preload href="/static/media/Agustina.21f233e1.woff" as="font" type="font/woff" crossorigin>
